# Forgemind

./: .env.example  .gitignore  FORGEMIND_MASTER_ARCHITECTURE.md  FORGEMIND_ROADMAP.md  FORGEMIND_ROADMAP_V2.md  Makefile  README.md  docker-compose.yml
apps/api/: Dockerfile  README.md  alembic.ini  dev_server.py  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 2026_03_26_0000_0001_initial_schema.py  2026_03_26_0001_0002_add_planner_results.py  2026_03_26_0002_0003_add_artifacts.py  2026_03_26_0003_0004_add_agents.py  2026_03_26_0004_0005_add_task_execution_columns.py  2026_03_26_0005_0006_add_approval_requests.py  2026_03_26_0006_0007_add_execution_events.py  2026_03_27_0007_0008_add_connectors.py  2026_03_27_0019_add_collaboration_and_code_ops.py  2026_03_28_0008_0009_add_project_connector_links.py  2026_03_28_0009_0010_add_credential_vault.py  2026_03_28_0010_0011_add_retry_columns.py  2026_03_28_0020_add_workspace_id_to_projects.py  2026_03_29_0011_0012_add_cost_records.py  (+7 more)
apps/api/app/: main.py
apps/api/evals/: conftest.py  test_quality_evals.py
apps/api/tests/: conftest.py  test_activity.py  test_agents.py  test_approvals.py  test_artifacts.py  test_chat.py  test_code_ops.py  test_code_ops_enhanced.py  test_collaboration_phase.py  test_composition.py  test_connectors.py  test_escalation.py  test_events.py  test_fm046_050.py  test_fm046_050_v2.py  test_health.py  test_members.py  test_memory.py  test_notifications.py  test_planner.py  test_projects.py  test_runs.py  test_schemas.py  test_streaming.py  test_tasks.py  test_workspaces.py
(+282 files in other folders)
